--- a/twitter_api/app/views/index.erb
+++ b/twitter_api/app/views/index.erb
@@ -1,11 +1,17 @@
   <h1>Bienvenido a Twitter API!</h1>
   <p>Este es un ejercicio para probar la gema de Twitter.</p>
 
-<form action="/fetch" method="post">
+<form action="/fetch" method="post" id="form1">
   Twitter Handle:<br>
   <input type="text" name="twitterhandle">
   <br>
   <input type="submit" value="Submit">
 </form>
 
+<h1>Tweets:</h1>
+<div id="tws">
+</div>
+
+<div id="loadingDiv">
   
+</div>
